core: 8.x => core_version_requirement: ^8.8 || ^9

--- a/dyniva_message.info.yml
+++ b/dyniva_message.info.yml
@@ -1,7 +1,7 @@
 name: 'Dyniva Message'
 description: 'Dyniva Media provides default content and user update logs message templates.'
 type: module
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 package: Dyniva
 dependencies:
   - flag
