--- a/modules/dyniva_message_comment/dyniva_message_comment.info.yml
+++ b/modules/dyniva_message_comment/dyniva_message_comment.info.yml
@@ -1,7 +1,7 @@
 name: 'Dyniva Message with Comment'
 description: 创建评论时触发通知
 type: module
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - comment
   - dyniva_message
